aria-hidden fixes layout shift (hidden had no height)

--- a/src/js/custom_elements/zigzag/zigzag.scss
+++ b/src/js/custom_elements/zigzag/zigzag.scss
@@ -3,7 +3,7 @@ zig-zag {
   place-self: end stretch;
   transition: opacity var(--transition) ease-out;
 
-  &[hidden] {
+  &[aria-hidden='true'] {
     opacity: 0;
   }
 
